spacing issue

--- a/css/modules/_utilities.scss
+++ b/css/modules/_utilities.scss
@@ -162,14 +162,12 @@
     }
 }
 
-@media (max-width: 320px) {
-    .mb-56px {
-        margin-bottom: 26px;
-    }
-}
-
 @media (max-width: 414px) {
     
+    .mb-56px {
+        margin-bottom: 40px;
+    }
+
     .pb-140px {
         padding-bottom: 90px;
     }
